list admins/mentors, wip create/edit admins

--- a/templates/dashboard/admin_dashboard.html
+++ b/templates/dashboard/admin_dashboard.html
@@ -4,7 +4,7 @@
   <div class="container">
       <div class="row">
         <div class="col-md-4 mb-4">
-          <a href="" class="text-dark">
+          <a href="/admins" class="text-dark">
             <div class="card h-100">
               <div class="card-body text-center">
                 <i class="fas fa-users fa-5x mb-4"></i>
@@ -14,7 +14,7 @@
           </a>
         </div>
         <div class="col-md-4 mb-4">
-          <a href="" class="text-dark">
+          <a href="/mentors" class="text-dark">
             <div class="card h-100">
               <div class="card-body text-center">
                 <i class="fas fa-chalkboard-teacher fa-5x mb-4"></i>
