--- a/templates/dashboard/mentor_dashboard.html
+++ b/templates/dashboard/mentor_dashboard.html
@@ -24,7 +24,7 @@
           </a>
         </div>
         <div class="col-md-4 mb-4">
-          <a href="edit-my-profile.html" class="text-dark">
+          <a href="/update-mentor/{{ session['userid'] }}" class="text-dark">
             <div class="card h-100">
               <div class="card-body text-center">
                 <i class="fas fa-pencil-alt fa-5x mb-4"></i>
