--- a/templates/dashboard/mentor_dashboard.html
+++ b/templates/dashboard/mentor_dashboard.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
   {% block body %}
+  {{session}}
   <h2> mentor dashboard</h2>
   <div class="container">
       <div class="row">
