crud mentor mostly working

--- a/templates/mentor/create.html
+++ b/templates/mentor/create.html
@@ -6,7 +6,7 @@
         <div class="card shadow">
           <div class="card-body">
             <h2 class="text-center">Create A Mentor</h2>
-            <form action="/create-mentor" method="post">
+            <form action="/mentors/create" method="post">
                 <div class="form-group">
                     <label for="email">Email address:</label>
                     <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
