--- a/templates/admin/list.html
+++ b/templates/admin/list.html
@@ -7,7 +7,7 @@
           <div class="card-body">
             <h2> Admins </h2>
             <a style="margin-bottom:5px" href="{{url_for('load_dashboard', _external=True)}}admins/create" class="btn btn-primary">Create New Admin</a>
-            <div id="admins-table-element" data-api-url="{{url_for('load_dashboard', _external=True)}}/get-all-admins"></div>
+            <div id="admins-table-element" data-api-url="{{url_for('load_dashboard', _external=True)}}admins/get-all-admins"></div>
           </div>
         </div>
       </div>
