--- a/templates/admin/create.html
+++ b/templates/admin/create.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
   {% block body %}
-  <div class="container-fluid bg-light">
+  <div class="container-fluid bg-light mt-5 mb-5">
     <div class="row justify-content-center align-items-center" style="height: 100vh;">
       <div class="col-sm-8 col-md-6">
         <div class="card shadow">
