--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-light" href="#">My Profile</a>
+            <a class="nav-link text-light" href="/profile">My Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-light" href="/logout">Logout</a>
