--- a/templates/dashboard/admin_dashboard.html
+++ b/templates/dashboard/admin_dashboard.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
   {% block body %}
-  <h2> admin dashboard</h2>
-  <div class="container">
+  <div class="container mt-5 mb-5">
       <div class="row">
         <div class="col-md-4 mb-4">
           <a href="/admins" class="text-dark">
