--- a/templates/admin/create.html
+++ b/templates/admin/create.html
@@ -6,9 +6,13 @@
         <div class="card shadow">
           <div class="card-body">
             <h2 class="text-center">Create An Admin</h2>
-            {% if error %}
-            <div class="alert alert-danger">{{ error }}</div>
-            {% endif %}
+            {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %}
+                {% for category, message in messages %}
+                  <div class="alert alert-{{ category }}">{{ message }}</div>
+                {% endfor %}
+              {% endif %}
+            {% endwith %}
             <form action="/admins/create" method="post">
                 <div class="form-group">
                     <label for="email">Email address:</label>
