--- a/templates/admin/list.html
+++ b/templates/admin/list.html
@@ -6,6 +6,13 @@
         <div class="card shadow">
           <div class="card-body">
             <h2> Admins </h2>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %}
+                {% for category, message in messages %}
+                  <div class="alert alert-{{ category }}">{{ message }}</div>
+                {% endfor %}
+              {% endif %}
+            {% endwith %}
             <a style="margin-bottom:5px" href="{{url_for('load_dashboard', _external=True)}}admins/create" class="btn btn-primary">Create New Admin</a>
             <div id="admins-table-element" data-api-url="{{url_for('load_dashboard', _external=True)}}admins/get-all-admins"></div>
           </div>
