--- a/templates/dashboard/admin_dashboard.html
+++ b/templates/dashboard/admin_dashboard.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
   {% block body %}
   <div class="container mt-5 mb-5">
+  	{% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }}">{{ message }}</div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
       <div class="row">
         <div class="col-md-4 mb-4">
           <a href="/admins" class="text-dark">
