--- a/templates/mentor/create.html
+++ b/templates/mentor/create.html
@@ -6,6 +6,13 @@
         <div class="card shadow">
           <div class="card-body">
             <h2 class="text-center">Create A Mentor</h2>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %}
+                {% for category, message in messages %}
+                  <div class="alert alert-{{ category }}">{{ message }}</div>
+                {% endfor %}
+              {% endif %}
+            {% endwith %}
             <form action="/mentors/create" method="post">
                 <div class="form-group">
                     <label for="email">Email address:</label>
