--- a/templates/mentor/list.html
+++ b/templates/mentor/list.html
@@ -1,17 +1,24 @@
 {% extends "base.html" %}
-    {% block body %}
-        <div class="container-fluid bg-light">
-            <div class="row justify-content-center align-items-center" style="height: 100vh;">
-                <div class="col-md-8">
-                    <div class="card shadow">
-                        <div class="card-body">
-                            <h2>Mentors</h2>
-                            <a style="margin-bottom:5px" href="{{url_for('load_dashboard', _external=True)}}mentors/create" class="btn btn-primary">Create New Mentor</a>
-                            <div id="mentors-table-element" data-api-url="{{url_for('load_dashboard', _external=True)}}mentors/get-all-mentors"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  {% block body %}
+  <div class="container-fluid bg-light">
+    <div class="row justify-content-center align-items-center" style="height: 100vh;">
+      <div class="col-md-8">
+        <div class="card shadow">
+          <div class="card-body">
+            <h2>Mentors</h2>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %}
+                {% for category, message in messages %}
+                  <div class="alert alert-{{ category }}">{{ message }}</div>
+                {% endfor %}
+              {% endif %}
+            {% endwith %}
+            <a style="margin-bottom:5px" href="{{url_for('load_dashboard', _external=True)}}mentors/create" class="btn btn-primary">Create New Mentor</a>
+            <div id="mentors-table-element" data-api-url="{{url_for('load_dashboard', _external=True)}}mentors/get-all-mentors"></div>
+          </div>
         </div>
-        <script src="../static/preact_components/dist/bundle.js"></script>
-    {% endblock %}
+      </div>
+    </div>
+  </div>
+  <script src="../static/preact_components/dist/bundle.js"></script>
+  {% endblock %}
