--- a/templates/admin/update.html
+++ b/templates/admin/update.html
@@ -28,6 +28,8 @@
                     <input type="text" class="form-control" id="last_name" value={{admin.3}} placeholder="Enter Last Name" name="last_name">
                 </div><br>
                 <button type="submit" class="btn btn-primary">Update Admin Details</button>
+                <br>
+                <a style="margin-bottom:5px;margin-top:5px" href="{{url_for('load_dashboard', _external=True)}}/admins" class="btn btn-primary">Back to Admin List</a>
             </form>
           </div>
         </div>
