--- a/templates/dashboard/admin_dashboard.html
+++ b/templates/dashboard/admin_dashboard.html
@@ -30,7 +30,7 @@
           </a>
         </div>
         <div class="col-md-4 mb-4">
-          <a href="" class="text-dark">
+          <a href="/questionnaires/submissions" class="text-dark">
             <div class="card h-100">
               <div class="card-body text-center">
                 <i class="fas fa-file-alt fa-5x mb-4"></i>
