--- a/templates/mentor/list.html
+++ b/templates/mentor/list.html
@@ -15,6 +15,7 @@
             {% endwith %}
             <a style="margin-bottom:5px" href="{{url_for('load_dashboard', _external=True)}}mentors/create" class="btn btn-primary">Create New Mentor</a>
             <div id="mentors-table-element" data-api-url="{{url_for('load_dashboard', _external=True)}}mentors/get-all-mentors"></div>
+            <a style="margin-bottom:5px" href="{{url_for('load_dashboard', _external=True)}}" class="btn btn-primary">Back to Dashboard</a>
           </div>
         </div>
       </div>
