--- a/templates/mentor/update.html
+++ b/templates/mentor/update.html
@@ -35,7 +35,8 @@
                   data-selected-category-ids="{{mentor_categories}}"
                   >   
                 </div><br>
-                <button type="submit" class="btn btn-primary">Update Profile</button>
+                <button type="submit" class="btn btn-primary">Update Profile</button><br>
+                <a style="margin-bottom:5px;margin-top:5px" href="{{url_for('load_dashboard', _external=True)}}/mentors" class="btn btn-primary">Back to Mentor List</a>
             </form>
           </div>
         </div>
