--- a/templates/questionnaire_submissions.html
+++ b/templates/questionnaire_submissions.html
@@ -5,7 +5,7 @@
       <div class="col-md-8">
         <div class="card shadow">
           <div class="card-body">
-            <h2> Admins </h2>
+            <h2> Questionnaire Submissions </h2>
             {% with messages = get_flashed_messages(with_categories=true) %}
               {% if messages %}
                 {% for category, message in messages %}
@@ -13,9 +13,7 @@
                 {% endfor %}
               {% endif %}
             {% endwith %}
-            <a style="margin-bottom:5px" href="{{url_for('load_dashboard', _external=True)}}admins/create" class="btn btn-primary">Create New Admin</a>
-            <div id="admins-table-element" data-api-url="{{url_for('load_dashboard', _external=True)}}admins/get-all-admins"></div>
-            <a style="margin-bottom:5px" href="{{url_for('load_dashboard', _external=True)}}" class="btn btn-primary">Back to Dashboard</a>
+            <div id="submissions-table-element" data-api-url="{{url_for('load_dashboard', _external=True)}}questionnaires/get-all-submissions"></div>
           </div>
         </div>
       </div>
