accepting matches, viewing proposed matches as admin

--- a/templates/dashboard/admin_dashboard.html
+++ b/templates/dashboard/admin_dashboard.html
@@ -42,21 +42,11 @@
       </div>
       <div class="row">
         <div class="col-md-4 mb-4">
-          <a href="" class="text-dark">
+          <a href="/mentors/matches" class="text-dark">
             <div class="card h-100">
               <div class="card-body text-center">
                 <i class="fas fa-handshake fa-5x mb-4"></i>
-                <h5 class="card-title">View Proposed Matches</h5>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-4 mb-4">
-          <a href="" class="text-dark">
-            <div class="card h-100">
-              <div class="card-body text-center">
-                <i class="fas fa-check-circle fa-5x mb-4"></i>
-                <h5 class="card-title">View Accepted Matches</h5>
+                <h5 class="card-title">View Mentor/Mentee Matches</h5>
               </div>
             </div>
           </a>
