--- a/templates/dashboard/mentor_dashboard.html
+++ b/templates/dashboard/mentor_dashboard.html
@@ -10,7 +10,7 @@
     {% endwith %}
       <div class="row">
         <div class="col-md-4 mb-4">
-          <a href="" class="text-dark">
+          <a href="matches/proposed/{{session.userid}}" class="text-dark">
             <div class="card h-100">
               <div class="card-body text-center">
                 <i class="fas fa-handshake fa-5x mb-4"></i>
