--- a/templates/dashboard/mentor_dashboard.html
+++ b/templates/dashboard/mentor_dashboard.html
@@ -20,7 +20,7 @@
           </a>
         </div>
         <div class="col-md-4 mb-4">
-          <a href="" class="text-dark">
+          <a href="matches/{{session.userid}}" class="text-dark">
             <div class="card h-100">
               <div class="card-body text-center">
                 <i class="fas fa-check-circle fa-5x mb-4"></i>
