use blueprints to manage routes, add tests

--- a/templates/admin/create.html
+++ b/templates/admin/create.html
@@ -27,7 +27,7 @@
                     <input type="text" class="form-control" id="last_name" placeholder="Enter Last Name" name="last_name">
                 </div><br>
                 <button type="submit" class="btn btn-primary">Create</button><br>
-                <a style="margin-bottom:5px;margin-top:5px" href="{{url_for('load_dashboard', _external=True)}}/admins" class="btn btn-primary">Back to Admin List</a>
+                <a style="margin-bottom:5px;margin-top:5px" href="{{url_for('dashboard_controller_bp.load_dashboard', _external=True)}}/admins" class="btn btn-primary">Back to Admin List</a>
             </form>
           </div>
         </div>
