--- a/templates/questionnaire_submission/view_submission.html
+++ b/templates/questionnaire_submission/view_submission.html
@@ -45,7 +45,7 @@
                 </div>
                 <br><hr>
               {% endfor %}
-              <a style="margin-bottom:5px" href="{{url_for('load_dashboard', _external=True)}}questionnaires/submissions" class="btn btn-primary">Back to Submissions</a>
+              <a style="margin-bottom:5px" href="{{url_for('dashboard_controller_bp.load_dashboard', _external=True)}}questionnaires/submissions" class="btn btn-primary">Back to Submissions</a>
             </form>
           </div>
         </div>
