--- a/templates/accepted-matches-list.html
+++ b/templates/accepted-matches-list.html
@@ -13,8 +13,8 @@
                 {% endfor %}
               {% endif %}
             {% endwith %}
-            <div id="accepted-matches-table-element" data-api-url="{{url_for('load_dashboard', _external=True)}}matches/accepted/{{ mentor_id }}"></div>
-            <a style="margin-bottom:5px" href="{{url_for('load_dashboard', _external=True)}}" class="btn btn-primary">Back to Dashboard</a>
+            <div id="accepted-matches-table-element" data-api-url="{{url_for('dashboard_controller_bp.load_dashboard', _external=True)}}matches/accepted/{{ mentor_id }}"></div>
+            <a style="margin-bottom:5px" href="{{url_for('dashboard_controller_bp.load_dashboard', _external=True)}}" class="btn btn-primary">Back to Dashboard</a>
           </div>
         </div>
       </div>
