--- a/templates/admin/update.html
+++ b/templates/admin/update.html
@@ -29,7 +29,7 @@
                 </div><br>
                 <button type="submit" class="btn btn-primary">Update Admin Details</button>
                 <br>
-                <a style="margin-bottom:5px;margin-top:5px" href="{{url_for('load_dashboard', _external=True)}}/admins" class="btn btn-primary">Back to Admin List</a>
+                <a style="margin-bottom:5px;margin-top:5px" href="{{url_for('dashboard_controller_bp.load_dashboard', _external=True)}}/admins" class="btn btn-primary">Back to Admin List</a>
             </form>
           </div>
         </div>
